# gpu-hot

./: .gitattributes  Dockerfile  app.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
